2013-12-04 John Wu <John dot Wu at ACM dot org>
	* src/whereClause.cpp: in verifyExpr convert the string value of a
	qString expression to a number if the column named is of a numeric
	type
	* src/utilidor.h, src/utilidor.cpp: add a variation of function
	find that take a starting position, use array values to project
	the expect position instead of using the straightforward binary
	search (have to be separate from the template ibis::array_t
	because there are types of array_t that can not support addition,
	subtraction or casting to double)
	* src/iroster.cpp: change icSearch to use the new ibis::util::find
	instead of simple loops

2013-12-03 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in evaluateRange check the cost before
	converting a discrete range to a continuous range
	* src/category.cpp: allow null strings as arguments to
	stringSearch

2013-12-02 John Wu <John dot Wu at ACM dot org>
	* src/iroster.cpp: in icSearch and oocSearch add one more attempt
	to read the .ind file into memory

2013-11-27 John Wu <John dot Wu at ACM dot org>
	* src/column.h: add functions hasIndex and hasRoster
	* src/column.cpp: check the existence of ibis::roster before
	attempting to use it
	* src/column.cpp: adjust the estimated cost for qDiscreteRange
	assuming numbers are uniformly distributed
	* src/category.cpp: add timers to stringSearch and keywordSearch

2013-11-26 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: streamline the evaluation options in evaluating
	qDiscreteRange, add a cost evaluation before using ibis::roster
	* tests/readcsv.cpp: remove the character / from the data set name

2013-11-25 John Wu <John dot Wu at ACM dot org>
	* src/query.h, src/query.cpp: add member function
	query::addConditions
	* src/whereClause.h, src/whereClause.cpp: add functions
	whereClause::addExpr and whereClause::addConditions
	* tests/readcsv.cpp: add code to parse infinity and NaN as doubles
	* src/fileManager.cpp: check RLIM_DATA when setting the maxBytes